// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownGroup Arrow down arrow should open the drop down 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--open-upward sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="dropdown__icon--hide sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked sc-bwzfXH fpSUnm"
      style="max-height: -44px;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Arrow key up should open the drop down 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--open-upward sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="dropdown__icon--hide sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked sc-bwzfXH fpSUnm"
      style="max-height: -44px;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Click outside should close the dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Click outside should not close the dropdown when the isOpen prop equals true 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--open-upward sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      >
        Option One
      </div>
      <svg
        class="dropdown__icon--hide sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked dropdown--overflow sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="dropdown__selected sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Escape key should close the drop down 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should close the drop down on click outside 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should not focus onClick 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--disabled sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="-1"
  >
    <label
      class="dropdown--large dropdown--border dropdown__label--disabled sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="dropdown__text--disabled sc-EHOje vdlIp"
      />
      <svg
        class="dropdown__chevron--disabled sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should open the drop down onClick 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should remove event listener when unmount 1`] = `""`;

exports[`DropDownGroup Space bar should select and close dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--open-upward sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      >
        Option One
      </div>
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="dropdown__selected sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Space bar should select and not close dropdown when the isOpen prop equals true 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--open-upward sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      >
        Option One
      </div>
      <svg
        class="dropdown__icon--hide sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked dropdown--overflow sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="dropdown__selected sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders default dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders default dropdown that should always open downwards 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders input correctly when the isOpen prop with a value of true is passed 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="dropdown__icon--hide sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked dropdown--overflow sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders input correctly when the keywordSearch prop with a value of false is passed 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders input correctly when the withKeyboardProvider prop with a value of false is passed 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          aria-labelledby="hidden-label__"
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders small dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--small dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--small sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders variant 0 with a placeholder prop 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Select_An_Option"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Select_An_Option"
      >
        Select An Option
      </span>
      <div
        class="sc-EHOje vdlIp"
      >
        Select An Option
      </div>
      <svg
        class="dropdown--no-border sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders variant 1 with a label prop 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Selected_Option:"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Selected_Option:"
      >
        Selected Option:
      </span>
      <div
        class="sc-EHOje vdlIp"
      />
      <svg
        class="dropdown--no-border sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup should allow scroll inside the dropdown when it is open 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--open-upward sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      >
        Option One
      </div>
      <svg
        class="dropdown__icon--hide sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked sc-bwzfXH fpSUnm"
      style="max-height: -44px;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="dropdown__selected sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup should disable scroll when dropdown is open 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--open-upward sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje vdlIp"
      >
        Option One
      </div>
      <svg
        class="dropdown__icon--hide sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked sc-bwzfXH fpSUnm"
      style="max-height: -44px;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="dropdown__selected sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionOne"
            role="option"
            tabindex="-1"
            value="ValueOne"
          >
            Option One
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionTwo"
            role="option"
            tabindex="-1"
            value="ValueTwo"
          >
            Second Option
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            data-testid="test-dropDownOptionThree"
            role="option"
            tabindex="-1"
            value="ValueThree"
          >
            Option Three
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup should render the correct label when label prop is passed, and when an array of children containing falsy values is passed to each DropDownOption 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Sort_By:"
    class="sc-bxivhb pBoyv"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Sort_By:"
      >
        Sort By:
      </span>
      <div
        class="sc-EHOje vdlIp"
      >
        Sort By:
         
        Date
      </div>
      <svg
        class="dropdown--no-border sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="dropdown__selected sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="date"
          >
            Date
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="distance"
          >
            Distance - 
            Closest
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="price"
          >
            Price 
            <span>
              On sale
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup should render the correct label when label prop is passed, and when an array of children containing string and node values is passed to each DropDownOption 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Sort_By:"
    class="sc-bxivhb pBoyv"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Sort_By:"
      >
        Sort By:
      </span>
      <div
        class="sc-EHOje vdlIp"
      >
        Sort By:
         
        Price 
        <span>
          On sale
        </span>
      </div>
      <svg
        class="dropdown--no-border sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="date"
          >
            Date
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="distance"
          >
            Distance - 
            Closest
          </span>
          <span
            class="dropdown__selected sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="price"
          >
            Price 
            <span>
              On sale
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup should render the correct label when label prop is passed, and when an array of children containing string values is passed to each DropDownOption 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Sort_By:"
    class="sc-bxivhb pBoyv"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Sort_By:"
      >
        Sort By:
      </span>
      <div
        class="sc-EHOje vdlIp"
      >
        Sort By:
         
        Distance - 
        Closest
      </div>
      <svg
        class="dropdown--no-border sc-ifAKCX bGhIY"
        fill="currentColor"
        height="12"
        viewBox="0 0 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH fpSUnm"
      style="max-height: 0;"
    >
      <div>
        <div
          class="sc-bZQynM koCnbp"
          role="listbox"
        >
          <span
            class="sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="date"
          >
            Date
          </span>
          <span
            class="dropdown__selected sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="distance"
          >
            Distance - 
            Closest
          </span>
          <span
            class="sc-gzVnrw iJMNFP"
            role="option"
            tabindex="-1"
            value="price"
          >
            Price 
            <span>
              On sale
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownOption should render the correct markup when a className prop is passed 1`] = `
<span
  className="dropdown__item--expandable iJMNFP"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  selected={Array []}
  tabIndex="-1"
  value="ValueOne"
>
  Option One
</span>
`;
